--- a/src/scss/config/_config.scss
+++ b/src/scss/config/_config.scss
@@ -3,7 +3,7 @@
 $color-primary: hsl(222 87% 47%);
 $color-primary-light: color.adjust(hsl(222 87% 47%), $lightness: 50%);
 
-$color-secondary: hsl(341 74% 61%);
+$color-secondary: hsl(341 74% 52%);
 
 $color-black: hsl(210 83% 14%);
 
